deployments/kustomize/spicedb/overlays/minikube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spicedb-ingress
  namespace: web3
  annotations:
    cert-manager.io/cluster-issuer: "local-ca-issuer"
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - spicedb.web3-local-dev.com
      secretName: spicedb-tls
  rules:
    - host: spicedb.web3-local-dev.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spicedb-grpc
                port:
                  number: 50051
